--- a/Assignment3/src/application/Menu.fxml
+++ b/Assignment3/src/application/Menu.fxml
@@ -5,20 +5,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.MenuController">
    <children>
-      <Text layoutX="87.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Wiki-Speak authoring tool">
+      <Text layoutX="37.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Wiki-Speak authoring tool">
          <font>
-            <Font size="20.0" />
-         </font>
-      </Text>
-      <Text layoutX="101.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select one of the following options:">
+            <Font size="25.0" />
+         </font></Text>
+      <Text layoutX="110.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select one of the following options:">
          <font>
-            <Font size="20.0" />
-         </font>
-      </Text>
-      <Button fx:id="buttonView" layoutX="116.0" layoutY="213.0" mnemonicParsing="false" onAction="#handleButtonView" text="View existing creations" />
-      <Button fx:id="buttonCreate" layoutX="373.0" layoutY="213.0" mnemonicParsing="false" onAction="#handleButtonCreate" text="Create new creation" />
+            <Font size="18.0" />
+         </font></Text>
+      <Button fx:id="buttonList" layoutX="85.0" layoutY="216.0" mnemonicParsing="false" onAction="#handleButtonList" text="View existing creations" />
+      <Button fx:id="buttonCreate" layoutX="356.0" layoutY="216.0" mnemonicParsing="false" onAction="#handleButtonCreate" text="Create a new  creation" />
    </children>
 </Pane>
