--- a/Assignment3/src/application/Search.fxml
+++ b/Assignment3/src/application/Search.fxml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
-
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SearchController">
+   <children>
+      <Text layoutX="36.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What would you like to search for on wikipedia?">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Text>
+      <TextField fx:id="textFieldTerm" layoutX="138.0" layoutY="165.0" prefHeight="26.0" prefWidth="324.0" promptText="Term" />
+      <Button fx:id="buttonSearch" layoutX="269.0" layoutY="214.0" mnemonicParsing="false" onAction="#handleButtonSearch" text="Search" />
+      <Button fx:id="buttonBack" layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#handleButtonSearchBack" text="Back" />
+   </children>
+</Pane>
