--- a/Assignment3/src/application/CreateMenu.fxml
+++ b/Assignment3/src/application/CreateMenu.fxml
@@ -6,11 +6,10 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.Pane?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CreateMenuController">
    <children>
-      <TextArea fx:id="textAreaResults" layoutX="27.0" layoutY="42.0" prefHeight="216.0" prefWidth="546.0" />
-      <Button fx:id="buttonPreview" layoutX="60.0" layoutY="289.0" mnemonicParsing="false" text="Preview" />
+      <TextArea fx:id="textAreaResults" layoutX="27.0" layoutY="42.0" prefHeight="216.0" prefWidth="546.0" wrapText="true" />
+      <Button fx:id="buttonPreview" layoutX="60.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview" />
       <MenuButton layoutX="184.0" layoutY="289.0" mnemonicParsing="false" text="MenuButton">
         <items>
           <MenuItem mnemonicParsing="false" text="Voice 1" />
