--- a/Assignment3/src/application/CreateMenu.fxml
+++ b/Assignment3/src/application/CreateMenu.fxml
@@ -8,15 +8,16 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CreateMenuController">
    <children>
-      <TextArea fx:id="textAreaResults" layoutX="27.0" layoutY="42.0" prefHeight="216.0" prefWidth="546.0" wrapText="true" />
-      <Button fx:id="buttonPreview" layoutX="60.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview" />
-      <MenuButton fx:id="menuButtonVoices" layoutX="253.0" layoutY="289.0" mnemonicParsing="false" text="Voices">
+      <TextArea fx:id="textAreaResults" layoutX="27.0" layoutY="58.0" prefHeight="216.0" prefWidth="546.0" wrapText="true" />
+      <Button fx:id="buttonPreview" layoutX="62.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview" />
+      <MenuButton fx:id="menuButtonVoices" layoutX="253.0" layoutY="299.0" mnemonicParsing="false" text="Voices">
         <items>
           <MenuItem fx:id="voice1" mnemonicParsing="false" onAction="#handleVoice1" text="Voice 1" />
           <MenuItem fx:id="voice2" mnemonicParsing="false" onAction="#handleVoice2" text="Voice 2" />
             <MenuItem fx:id="voice3" mnemonicParsing="false" onAction="#handleVoice3" text="Voice 3" />
         </items>
       </MenuButton>
-      <Button fx:id="buttonSave" layoutX="416.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleButtonSave" text="Save Audio File" />
+      <Button fx:id="buttonSave" layoutX="416.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonSave" text="Save Audio File" />
+      <Button fx:id="buttonBack" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Button" />
    </children>
 </Pane>
