--- a/Assignment3/src/application/CreateMenu.fxml
+++ b/Assignment3/src/application/CreateMenu.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CreateMenuController">
@@ -19,5 +20,6 @@
       </MenuButton>
       <Button fx:id="buttonSave" layoutX="416.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonSave" text="Save Audio File" />
       <Button fx:id="buttonBack" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Button" />
+      <TextField fx:id="textFieldAudioName" layoutX="389.0" layoutY="342.0" onAction="#handleTextFieldAudioName" promptText="Name your audio file" />
    </children>
 </Pane>
