--- a/Assignment3/src/application/CreateMenu.fxml
+++ b/Assignment3/src/application/CreateMenu.fxml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CreateMenuController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CreateMenuController">
    <children>
       <TextArea fx:id="textAreaResults" layoutX="27.0" layoutY="58.0" prefHeight="216.0" prefWidth="546.0" wrapText="true" />
-      <Button fx:id="buttonPreview" layoutX="62.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview" />
-      <MenuButton fx:id="menuButtonVoices" layoutX="253.0" layoutY="299.0" mnemonicParsing="false" text="Voices">
+      <Button fx:id="buttonPreview" layoutX="265.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview" />
+      <MenuButton fx:id="menuButtonVoices" layoutX="63.0" layoutY="298.0" mnemonicParsing="false" text="Voices">
         <items>
           <MenuItem fx:id="voice1" mnemonicParsing="false" onAction="#handleVoice1" text="Voice 1" />
           <MenuItem fx:id="voice2" mnemonicParsing="false" onAction="#handleVoice2" text="Voice 2" />
             <MenuItem fx:id="voice3" mnemonicParsing="false" onAction="#handleVoice3" text="Voice 3" />
         </items>
       </MenuButton>
-      <Button fx:id="buttonSave" layoutX="416.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonSave" text="Save Audio File" />
-      <Button fx:id="buttonBack" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Button" />
-      <TextField fx:id="textFieldAudioName" layoutX="389.0" layoutY="342.0" onAction="#handleTextFieldAudioName" promptText="Name your audio file" />
+      <Button fx:id="buttonSave" layoutX="423.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonSave" text="Save Audio File" />
+      <Button fx:id="buttonBack" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Back" />
+      <TextField fx:id="textFieldAudioName" layoutX="396.0" layoutY="342.0" onAction="#handleTextFieldAudioName" promptText="Name your audio file" />
+      <Slider fx:id="sliderRate" layoutX="32.0" layoutY="368.0" max="3.0" min="0.5" onDragDetected="#handleSliderChanged" />
+      <Text layoutX="25.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change rate of speech" />
+      <Label fx:id="labelSliderValue" layoutX="44.0" layoutY="392.0" />
    </children>
 </Pane>
