--- a/Assignment3/src/application/CreateMenu.fxml
+++ b/Assignment3/src/application/CreateMenu.fxml
@@ -23,7 +23,7 @@
       </MenuButton>
       <Button fx:id="buttonSave" layoutX="423.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonSave" text="Save Audio File" />
       <Button fx:id="buttonBack" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Back" />
-      <TextField fx:id="textFieldAudioName" layoutX="396.0" layoutY="342.0" onAction="#handleTextFieldAudioName" promptText="Name your audio file" />
+      <TextField fx:id="textFieldAudioName" layoutX="396.0" layoutY="342.0" promptText="Name your audio file" />
       <Slider fx:id="sliderRate" layoutX="32.0" layoutY="368.0" max="3.0" min="0.5" onDragDetected="#handleSliderChanged" />
       <Text layoutX="25.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change rate of speech" />
       <Label fx:id="labelSliderValue" layoutX="44.0" layoutY="392.0" />
