--- a/Assignment3/src/application/CreateMenu.fxml
+++ b/Assignment3/src/application/CreateMenu.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CreateMenuController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CreateMenuController">
    <children>
       <TextArea fx:id="textAreaResults" layoutX="27.0" layoutY="58.0" prefHeight="216.0" prefWidth="546.0" wrapText="true" />
       <Button fx:id="buttonPreview" layoutX="265.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview" />
@@ -27,5 +27,6 @@
       <Slider fx:id="sliderRate" layoutX="32.0" layoutY="368.0" max="3.0" min="0.5" onDragDetected="#handleSliderChanged" />
       <Text layoutX="25.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change rate of speech" />
       <Label fx:id="labelSliderValue" layoutX="44.0" layoutY="392.0" />
+      <Button fx:id="buttonNext" layoutX="342.0" layoutY="431.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select/Combine audio files" />
    </children>
 </Pane>
