--- a/Assignment3/src/application/Menu.fxml
+++ b/Assignment3/src/application/Menu.fxml
@@ -5,17 +5,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="application.MenuController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MenuController">
    <children>
-      <Text layoutX="37.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the Wiki-Speak authoring tool">
+      <Text layoutX="14.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wiki-Speak authoring tool" textAlignment="CENTER">
          <font>
-            <Font size="25.0" />
+            <Font size="45.0" />
          </font></Text>
-      <Text layoutX="110.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select one of the following options:">
+      <Text layoutX="157.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select one of the following options:">
          <font>
-            <Font size="18.0" />
+            <Font size="42.0" />
          </font></Text>
-      <Button fx:id="buttonList" layoutX="85.0" layoutY="216.0" mnemonicParsing="false" onAction="#handleButtonList" text="View existing creations" />
-      <Button fx:id="buttonCreate" layoutX="356.0" layoutY="216.0" mnemonicParsing="false" onAction="#handleButtonCreate" text="Create a new  creation" />
+      <Button fx:id="buttonList" layoutX="326.0" layoutY="459.0" mnemonicParsing="false" onAction="#handleButtonList" text="View existing creations" />
+      <Button fx:id="buttonCreate" layoutX="706.0" layoutY="459.0" mnemonicParsing="false" onAction="#handleButtonCreate" text="Create a new  creation" />
    </children>
 </Pane>
