--- a/Assignment3/src/application/Play.fxml
+++ b/Assignment3/src/application/Play.fxml
@@ -1,11 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.media.MediaView?>
+<?import javafx.scene.shape.Polygon?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PlayController">
+<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PlayController">
    <children>
-      <MediaView fx:id="mediaView" fitHeight="300.0" fitWidth="500.0" layoutX="50.0" layoutY="50.0" />
+      <StackPane fx:id="mediaViewPane" prefHeight="800.0" prefWidth="1200.0">
+         <children>
+            <MediaView fx:id="mediaView" fitHeight="${mediaViewPane.height}" fitWidth="${mediaViewPane.width}" />
+         </children>
+      </StackPane>
+      <Button fx:id="buttonMute" layoutX="1000.0" layoutY="800.0" mnemonicParsing="false" onAction="#handleButtonMute" prefHeight="50.0" prefWidth="200.0" text="mute" />
+      <Button fx:id="buttonPlay" layoutY="800.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleButtonPlay" prefHeight="50.0" prefWidth="70.0">
+         <graphic>
+            <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="60.0">
+               <children>
+                  <Polygon points="-50.0, 40.0, 50.0, 40.0, 0.0, -60.0" rotate="90.0" scaleX="0.28" scaleY="0.3" stroke="BLACK" strokeType="INSIDE" translateX="-30.0" translateY="-25.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="30.0" stroke="BLACK" strokeType="INSIDE" translateX="-60.0" translateY="10.0" width="8.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="30.0" stroke="BLACK" strokeType="INSIDE" translateX="-58.0" translateY="10.0" width="8.0" />
+               </children>
+            </HBox>
+         </graphic>
+      </Button>
+      <Slider fx:id="progressSlider" layoutX="80.0" layoutY="800.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#handleSliderChanged" onMouseDragExited="#handleSliderDragged" onMousePressed="#handleMousePressed" onMouseReleased="#handleMouseReleased" prefHeight="50.0" prefWidth="750.0" />
+      <Label fx:id="timeLabel" alignment="CENTER" layoutX="830.0" layoutY="800.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="170.0" textAlignment="CENTER">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
