--- a/Assignment3/src/application/ImageSelector.fxml
+++ b/Assignment3/src/application/ImageSelector.fxml
@@ -27,5 +27,6 @@
       </Text>
       <TextField fx:id="textFieldName" layoutX="215.0" layoutY="256.0" promptText="Enter a name" visible="false" />
       <Button fx:id="buttonCreate" layoutX="407.0" layoutY="256.0" mnemonicParsing="false" onAction="#handleButtonCreate" text="Create" visible="false" />
+      <Button fx:id="buttonBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Back" />
    </children>
 </Pane>
