--- a/Assignment3/src/application/CreateMenu.fxml
+++ b/Assignment3/src/application/CreateMenu.fxml
@@ -8,25 +8,31 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CreateMenuController">
    <children>
-      <TextArea fx:id="textAreaResults" layoutX="27.0" layoutY="58.0" prefHeight="216.0" prefWidth="546.0" wrapText="true" />
-      <Button fx:id="buttonPreview" layoutX="265.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview" />
-      <MenuButton fx:id="menuButtonVoices" layoutX="63.0" layoutY="298.0" mnemonicParsing="false" text="Voices">
+      <TextArea fx:id="textAreaResults" layoutX="27.0" layoutY="75.0" prefHeight="216.0" prefWidth="546.0" wrapText="true" />
+      <Button fx:id="buttonPreview" layoutX="265.0" layoutY="313.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview" />
+      <MenuButton fx:id="menuButtonVoices" layoutX="63.0" layoutY="313.0" mnemonicParsing="false" text="Voices">
         <items>
           <MenuItem fx:id="voice1" mnemonicParsing="false" onAction="#handleVoice1" text="Voice 1" />
           <MenuItem fx:id="voice2" mnemonicParsing="false" onAction="#handleVoice2" text="Voice 2" />
             <MenuItem fx:id="voice3" mnemonicParsing="false" onAction="#handleVoice3" text="Voice 3" />
         </items>
       </MenuButton>
-      <Button fx:id="buttonSave" layoutX="423.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleButtonSave" text="Save Audio File" />
+      <Button fx:id="buttonSave" layoutX="423.0" layoutY="311.0" mnemonicParsing="false" onAction="#handleButtonSave" text="Save Audio File" />
       <Button fx:id="buttonBack" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Back" />
-      <TextField fx:id="textFieldAudioName" layoutX="396.0" layoutY="342.0" promptText="Name your audio file" />
-      <Slider fx:id="sliderRate" layoutX="32.0" layoutY="368.0" max="3.0" min="0.5" onDragDetected="#handleSliderChanged" />
-      <Text layoutX="25.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change rate of speech" />
+      <TextField fx:id="textFieldAudioName" layoutX="396.0" layoutY="357.0" promptText="Name your audio file" />
+      <Slider fx:id="sliderRate" layoutX="32.0" layoutY="389.0" max="3.0" min="0.5" onDragDetected="#handleSliderChanged" />
+      <Text layoutX="25.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Change rate of speech" />
       <Label fx:id="labelSliderValue" layoutX="44.0" layoutY="392.0" />
       <Button fx:id="buttonNext" layoutX="342.0" layoutY="431.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select/Combine audio files" />
+      <Text layoutX="95.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select text to preview or save to an audio file">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
    </children>
 </Pane>
