--- a/Assignment3/src/application/AudioSelection.fxml
+++ b/Assignment3/src/application/AudioSelection.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AudioSelectionController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.AudioSelectionController">
    <children>
       <ListView fx:id="listViewAudioFiles" layoutX="50.0" layoutY="67.0" prefHeight="200.0" prefWidth="200.0" />
       <ListView fx:id="listViewSelected" layoutX="359.0" layoutY="67.0" prefHeight="200.0" prefWidth="200.0" />
