--- a/Assignment3/src/application/AudioSelection.fxml
+++ b/Assignment3/src/application/AudioSelection.fxml
@@ -3,18 +3,40 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.AudioSelectionController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AudioSelectionController">
    <children>
-      <ListView fx:id="listViewAudioFiles" layoutX="50.0" layoutY="67.0" prefHeight="200.0" prefWidth="200.0" />
-      <ListView fx:id="listViewSelected" layoutX="359.0" layoutY="67.0" prefHeight="200.0" prefWidth="200.0" />
-      <Button fx:id="buttonAdd" layoutX="280.0" layoutY="109.0" mnemonicParsing="false" onAction="#handleButtonAdd" text="&gt;&gt;" />
-      <Button fx:id="buttonMoveBack" layoutX="280.0" layoutY="203.0" mnemonicParsing="false" onAction="#handleButtonMoveBack" text="&lt;&lt;" />
-      <Button fx:id="buttonNext" layoutX="250.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select number of images &amp; Create video" />
-      <Button fx:id="buttonPreview" layoutX="113.0" layoutY="287.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview " />
-      <Button fx:id="buttonBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Back" />
-      <Text layoutX="349.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Audio files to be included in video" />
-      <Text layoutX="88.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Existing audio files" />
+      <ListView fx:id="listViewAudioFiles" layoutX="184.0" layoutY="224.0" prefHeight="300.0" prefWidth="300.0" />
+      <ListView fx:id="listViewSelected" layoutX="721.0" layoutY="224.0" prefHeight="300.0" prefWidth="300.0" />
+      <Button fx:id="buttonAdd" layoutX="572.0" layoutY="280.0" mnemonicParsing="false" onAction="#handleButtonAdd" text="&gt;&gt;">
+         <font>
+            <Font name="Manjari Regular" size="24.0" />
+         </font></Button>
+      <Button fx:id="buttonMoveBack" layoutX="572.0" layoutY="415.0" mnemonicParsing="false" onAction="#handleButtonMoveBack" text="&lt;&lt;">
+         <font>
+            <Font name="Manjari Regular" size="24.0" />
+         </font></Button>
+      <Button fx:id="buttonNext" layoutX="605.0" layoutY="642.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select number of images &amp; Create video">
+         <font>
+            <Font name="Manjari Regular" size="24.0" />
+         </font></Button>
+      <Button fx:id="buttonPreview" layoutX="273.0" layoutY="642.0" mnemonicParsing="false" onAction="#handleButtonPreview" text="Preview ">
+         <font>
+            <Font name="Manjari Regular" size="24.0" />
+         </font></Button>
+      <Button fx:id="buttonBack" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Back">
+         <font>
+            <Font name="Manjari Regular" size="24.0" />
+         </font></Button>
+      <Text fill="WHITE" layoutX="600.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Audio files to be included in video">
+         <font>
+            <Font name="DejaVu Sans ExtraLight" size="32.0" />
+         </font></Text>
+      <Text fill="WHITE" layoutX="184.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Existing audio files">
+         <font>
+            <Font name="DejaVu Sans ExtraLight" size="32.0" />
+         </font></Text>
    </children>
 </Pane>
