--- a/Assignment3/src/application/AudioSelection.fxml
+++ b/Assignment3/src/application/AudioSelection.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AudioSelectionController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.AudioSelectionController">
    <children>
       <ListView fx:id="listViewAudioFiles" layoutX="184.0" layoutY="224.0" prefHeight="300.0" prefWidth="300.0" />
       <ListView fx:id="listViewSelected" layoutX="721.0" layoutY="224.0" prefHeight="300.0" prefWidth="300.0" />
