--- a/Assignment3/src/application/CreateMenu.fxml
+++ b/Assignment3/src/application/CreateMenu.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CreateMenuController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.CreateMenuController">
    <children>
       <TextArea fx:id="textAreaResults" layoutX="187.0" layoutY="147.0" prefHeight="400.0" prefWidth="800.0" wrapText="true">
          <font>
@@ -47,7 +47,7 @@
             <Font name="DejaVu Sans ExtraLight" size="24.0" />
          </font></Text>
       <Label fx:id="labelSliderValue" layoutX="44.0" layoutY="392.0" />
-      <Button fx:id="buttonNext" layoutX="793.0" layoutY="709.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select/Combine audio files">
+      <Button fx:id="buttonNext" layoutX="757.0" layoutY="709.0" mnemonicParsing="false" onAction="#handleButtonNext" text="Next: Select/Combine audio files">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
