--- a/Assignment3/src/application/List.fxml
+++ b/Assignment3/src/application/List.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ListController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.ListController">
    <children>
       <ListView fx:id="listView" layoutX="350.0" layoutY="214.0" onMouseClicked="#handleItemSelection" prefHeight="400.0" prefWidth="500.0" />
       <Button fx:id="buttonBack" layoutX="29.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleButtonBack" text="Back">
@@ -17,7 +17,7 @@
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
-      <Button fx:id="buttonDelete" layoutX="447.0" layoutY="722.0" mnemonicParsing="false" onAction="#handleButtonDelete" text="Delete Selected Creation">
+      <Button fx:id="buttonDelete" layoutX="434.0" layoutY="723.0" mnemonicParsing="false" onAction="#handleButtonDelete" text="Delete Selected Creation">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
