--- a/Assignment3/src/application/Menu.fxml
+++ b/Assignment3/src/application/Menu.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MenuController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.MenuController">
    <children>
       <Text fill="WHITE" layoutX="185.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VARpedia" textAlignment="CENTER" wrappingWidth="830.94580078125">
          <font>
@@ -19,7 +19,7 @@
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
-      <Button fx:id="buttonCreate" layoutX="756.0" layoutY="528.0" mnemonicParsing="false" onAction="#handleButtonCreate" prefWidth="286.0" text="Create a new  creation">
+      <Button fx:id="buttonCreate" layoutX="756.0" layoutY="528.0" mnemonicParsing="false" onAction="#handleButtonCreate" prefHeight="46.0" prefWidth="328.0" text="Create a new  creation">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
