--- a/Assignment3/src/application/ImageSelector.fxml
+++ b/Assignment3/src/application/ImageSelector.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="application.ImageSelectorController">
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ImageSelectorController">
    <children>
       <Text fill="WHITE" layoutX="65.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="How many images would you like in your creation?">
          <font>
@@ -35,7 +35,7 @@
          <font>
             <Font size="24.0" />
          </font></TextField>
-      <Button fx:id="buttonCreate" layoutX="516.0" layoutY="631.0" mnemonicParsing="false" onAction="#handleButtonCreate" text="Create" visible="false">
+      <Button fx:id="buttonCreate" layoutX="516.0" layoutY="631.0" mnemonicParsing="false" onAction="#handleButtonImageCreate" text="Create" visible="false">
          <font>
             <Font name="Manjari Regular" size="24.0" />
          </font></Button>
