--- a/Assignment3/src/application/application.css
+++ b/Assignment3/src/application/application.css
@@ -1,1 +1,3 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.root {
+    -fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #000000, #757575)
+}
